# andvari

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  deny.toml  docker-compose.yml  justfile
.github/actions/setup-andvari/: action.yml
crates/andvari-cli/: Cargo.toml
crates/andvari-cli/src/: api.rs  keyring_store.rs  main.rs
crates/andvari-core/: Cargo.toml
crates/andvari-core/src/: dynamic.rs  error.rs  lib.rs  seal.rs
crates/andvari-core/src/audit/: chain.rs  mod.rs  row.rs
crates/andvari-core/src/crypto/: aead.rs  envelope.rs  keys.rs  mod.rs
crates/andvari-core/src/seal/: kms.rs  mod.rs  progress.rs  shamir.rs
crates/andvari-sdk/: Cargo.toml
crates/andvari-sdk/src/: client.rs  config.rs  lib.rs
crates/andvari-server/: Cargo.toml
crates/andvari-server/migrations/: 0001_init.sql  0002_audit_replication.sql
crates/andvari-server/src/: audit.rs  audit_replication.rs  db.rs  kms.rs  log_redact.rs  main.rs  metrics.rs  middleware.rs  spire.rs  state.rs  sys.rs
crates/andvari-server/src/api/: approvals.rs  audit_view.rs  environments.rs  init.rs  mod.rs  projects.rs  secrets.rs  tokens.rs  workspaces.rs
crates/andvari-server/src/auth/: middleware.rs  mod.rs  scope.rs  token.rs
crates/andvari-server/src/dynamic/: api.rs  aws_sts.rs  mod.rs  mysql.rs  postgres.rs  registry.rs  ssh_otp.rs
crates/andvari-server/src/kms/: aws_kms.rs  vault_transit.rs
crates/andvari-server/src/oidc/: federation.rs  handlers.rs  mod.rs  provider.rs  sessions.rs
crates/andvari-server/src/ui/: mod.rs  render.rs  session.rs  setup.rs
crates/andvari-server/src/ui/assets/: andvari.css
crates/andvari-server/src/webhooks/: api.rs  dispatcher.rs  mod.rs  worker.rs
crates/andvari-server/templates/: approvals.html  audit.html  dashboard.html  layout.html  login.html  secret_detail.html  secrets.html  setup.html  setup_done.html  tokens.html
docs/oidc/: pocket-id.md
