[workspace]
resolver = "3"
members = [
    "crates/andvari-core",
    "crates/andvari-server",
    "crates/andvari-cli",
    "crates/andvari-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamngoni/andvari"
authors = ["Ngonidzashe Mangudya <imngonii@gmail.com>"]

[workspace.dependencies]
# error handling
anyhow = "1"
thiserror = "2"

# async runtime + http server
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-session = { version = "0.10", features = ["cookie-session"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rand = "0.8"
vsss-rs = "5"
subtle = "2"

# database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "time",
    "json",
    "macros",
    "migrate",
    "ipnetwork",
] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "0.8"

# config
figment = { version = "0.10", features = ["toml", "env"] }

# uuid + time
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }

# templating
askama = "0.12"

# cli
clap = { version = "4", features = ["derive", "env"] }

# http client (sdk + cli)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# misc
once_cell = "1"
keyring = "3"
include_dir = "0.7"
base64 = "0.22"
url = "2"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
