[package]
name = "andvari-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types, errors, and crypto primitives for Andvari"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
