[package]
name = "andvari-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Public Rust SDK for Andvari"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = "3"
