[package]
name = "andvari-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Andvari secrets vault server"

[[bin]]
name = "andvari-server"
path = "src/main.rs"

[dependencies]
andvari-core = { path = "../andvari-core" }

actix-web = { workspace = true }
actix-session = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

figment = { workspace = true }
toml = { workspace = true }

uuid = { workspace = true }
time = { workspace = true }

askama = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
