[package]
name = "andvari-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Andvari secrets vault server"

[[bin]]
name = "andvari-server"
path = "src/main.rs"

[dependencies]
andvari-core = { path = "../andvari-core" }

actix-web = { workspace = true }
actix-session = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

figment = { workspace = true }
toml = { workspace = true }

uuid = { workspace = true }
time = { workspace = true }

askama = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

# kms / http clients
reqwest = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
ipnetwork = "0.20"

# auth
argon2 = { workspace = true }
rand = { workspace = true }

# oidc
openidconnect = { workspace = true }
jsonwebtoken = { workspace = true }

# observability
prometheus = "0.13"
once_cell = { workspace = true }
tokio-stream = "0.1"
futures-util = "0.3"

# webhooks
hmac = { workspace = true }
sha2 = { workspace = true }

# aws (dynamic STS engine, KMS unseal, S3 audit replication)
aws-config = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-sdk-s3 = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
